lang/parser/vylang_parser.go
// Code generated from java-escape by ANTLR 4.11.1. DO NOT EDIT.

package parser // VyLang
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type VyLangParser struct {
	*antlr.BaseParser
}

var vylangParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func vylangParserInit() {
	staticData := &vylangParserStaticData
	staticData.literalNames = []string{
		"", "'pipe'", "'on'", "'->'", "':'", "'@id'", "'@name'", "'@created'",
		"'@data'", "'@size'", "'@user'", "'@value'", "'@string'", "'@integer'",
		"'@float'", "'@boolean'", "'<-'", "'{'", "'}'", "'['", "']'", "'/'",
		"'#'", "'.'", "','",
	}
	staticData.symbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "STRING", "IDENT", "NL", "WHITESPACE",
		"DIGITS",
	}
	staticData.ruleNames = []string{
		"definitions", "definition", "namedPipe", "contextPipe", "pipe", "pipeProperty",
		"pipeNamedProperty", "pipeTerminal", "pipeField", "pipeFieldForward",
		"pipeFieldBackward", "pipeModified", "pipeMap", "pipeMapEntry", "pipeModifier",
		"pathModel", "pathRelation", "identPath", "sep",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// VyLangParserInit initializes any static state used to implement VyLangParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewVyLangParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func VyLangParserInit() {
	staticData := &vylangParserStaticData
	staticData.once.Do(vylangParserInit)
}

// NewVyLangParser produces a new parser instance for the optional input antlr.TokenStream.
func NewVyLangParser(input antlr.TokenStream) *VyLangParser {
	VyLangParserInit()
	this := new(VyLangParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &vylangParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "java-escape"

	return this
}

// VyLangParser tokens.
const (
	VyLangParserEOF        = antlr.TokenEOF
	VyLangParserT__0       = 1
	VyLangParserT__1       = 2
	VyLangParserT__2       = 3
	VyLangParserT__3       = 4
	VyLangParserT__4       = 5
	VyLangParserT__5       = 6
	VyLangParserT__6       = 7
	VyLangParserT__7       = 8
	VyLangParserT__8       = 9
	VyLangParserT__9       = 10
	VyLangParserT__10      = 11
	VyLangParserT__11      = 12
	VyLangParserT__12      = 13
	VyLangParserT__13      = 14
	VyLangParserT__14      = 15
	VyLangParserT__15      = 16
	VyLangParserT__16      = 17
	VyLangParserT__17      = 18
	VyLangParserT__18      = 19
	VyLangParserT__19      = 20
	VyLangParserT__20      = 21
	VyLangParserT__21      = 22
	VyLangParserT__22      = 23
	VyLangParserT__23      = 24
	VyLangParserSTRING     = 25
	VyLangParserIDENT      = 26
	VyLangParserNL         = 27
	VyLangParserWHITESPACE = 28
	VyLangParserDIGITS     = 29
)

// VyLangParser rules.
const (
	VyLangParserRULE_definitions       = 0
	VyLangParserRULE_definition        = 1
	VyLangParserRULE_namedPipe         = 2
	VyLangParserRULE_contextPipe       = 3
	VyLangParserRULE_pipe              = 4
	VyLangParserRULE_pipeProperty      = 5
	VyLangParserRULE_pipeNamedProperty = 6
	VyLangParserRULE_pipeTerminal      = 7
	VyLangParserRULE_pipeField         = 8
	VyLangParserRULE_pipeFieldForward  = 9
	VyLangParserRULE_pipeFieldBackward = 10
	VyLangParserRULE_pipeModified      = 11
	VyLangParserRULE_pipeMap           = 12
	VyLangParserRULE_pipeMapEntry      = 13
	VyLangParserRULE_pipeModifier      = 14
	VyLangParserRULE_pathModel         = 15
	VyLangParserRULE_pathRelation      = 16
	VyLangParserRULE_identPath         = 17
	VyLangParserRULE_sep               = 18
)

// IDefinitionsContext is an interface to support dynamic dispatch.
type IDefinitionsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDefinitionsContext differentiates from other interfaces.
	IsDefinitionsContext()
}

type DefinitionsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDefinitionsContext() *DefinitionsContext {
	var p = new(DefinitionsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = VyLangParserRULE_definitions
	return p
}

func (*DefinitionsContext) IsDefinitionsContext() {}

func NewDefinitionsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DefinitionsContext {
	var p = new(DefinitionsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = VyLangParserRULE_definitions

	return p
}

func (s *DefinitionsContext) GetParser() antlr.Parser { return s.parser }

func (s *DefinitionsContext) EOF() antlr.TerminalNode {
	return s.GetToken(VyLangParserEOF, 0)
}

func (s *DefinitionsContext) AllNL() []antlr.TerminalNode {
	return s.GetTokens(VyLangParserNL)
}

func (s *DefinitionsContext) NL(i int) antlr.TerminalNode {
	return s.GetToken(VyLangParserNL, i)
}

func (s *DefinitionsContext) AllDefinition() []IDefinitionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IDefinitionContext); ok {
			len++
		}
	}

	tst := make([]IDefinitionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IDefinitionContext); ok {
			tst[i] = t.(IDefinitionContext)
			i++
		}
	}

	return tst
}

func (s *DefinitionsContext) Definition(i int) IDefinitionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDefinitionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDefinitionContext)
}

func (s *DefinitionsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DefinitionsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DefinitionsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.EnterDefinitions(s)
	}
}

func (s *DefinitionsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.ExitDefinitions(s)
	}
}

func (p *VyLangParser) Definitions() (localctx IDefinitionsContext) {
	this := p
	_ = this

	localctx = NewDefinitionsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, VyLangParserRULE_definitions)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(41)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(38)
				p.Match(VyLangParserNL)
			}

		}
		p.SetState(43)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext())
	}
	p.SetState(59)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			p.SetState(47)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			for _la == VyLangParserNL {
				{
					p.SetState(44)
					p.Match(VyLangParserNL)
				}

				p.SetState(49)
				p.GetErrorHandler().Sync(p)
				_la = p.GetTokenStream().LA(1)
			}
			{
				p.SetState(50)
				p.Definition()
			}
			p.SetState(54)
			p.GetErrorHandler().Sync(p)
			_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext())

			for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
				if _alt == 1 {
					{
						p.SetState(51)
						p.Match(VyLangParserNL)
					}

				}
				p.SetState(56)
				p.GetErrorHandler().Sync(p)
				_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext())
			}

		}
		p.SetState(61)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext())
	}
	p.SetState(65)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == VyLangParserNL {
		{
			p.SetState(62)
			p.Match(VyLangParserNL)
		}

		p.SetState(67)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(68)
		p.Match(VyLangParserEOF)
	}

	return localctx
}

// IDefinitionContext is an interface to support dynamic dispatch.
type IDefinitionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDefinitionContext differentiates from other interfaces.
	IsDefinitionContext()
}

type DefinitionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDefinitionContext() *DefinitionContext {
	var p = new(DefinitionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = VyLangParserRULE_definition
	return p
}

func (*DefinitionContext) IsDefinitionContext() {}

func NewDefinitionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DefinitionContext {
	var p = new(DefinitionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = VyLangParserRULE_definition

	return p
}

func (s *DefinitionContext) GetParser() antlr.Parser { return s.parser }

func (s *DefinitionContext) NamedPipe() INamedPipeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INamedPipeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INamedPipeContext)
}

func (s *DefinitionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DefinitionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DefinitionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.EnterDefinition(s)
	}
}

func (s *DefinitionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.ExitDefinition(s)
	}
}

func (p *VyLangParser) Definition() (localctx IDefinitionContext) {
	this := p
	_ = this

	localctx = NewDefinitionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, VyLangParserRULE_definition)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(70)
		p.NamedPipe()
	}

	return localctx
}

// INamedPipeContext is an interface to support dynamic dispatch.
type INamedPipeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsNamedPipeContext differentiates from other interfaces.
	IsNamedPipeContext()
}

type NamedPipeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNamedPipeContext() *NamedPipeContext {
	var p = new(NamedPipeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = VyLangParserRULE_namedPipe
	return p
}

func (*NamedPipeContext) IsNamedPipeContext() {}

func NewNamedPipeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NamedPipeContext {
	var p = new(NamedPipeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = VyLangParserRULE_namedPipe

	return p
}

func (s *NamedPipeContext) GetParser() antlr.Parser { return s.parser }

func (s *NamedPipeContext) IDENT() antlr.TerminalNode {
	return s.GetToken(VyLangParserIDENT, 0)
}

func (s *NamedPipeContext) ContextPipe() IContextPipeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IContextPipeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IContextPipeContext)
}

func (s *NamedPipeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NamedPipeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NamedPipeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.EnterNamedPipe(s)
	}
}

func (s *NamedPipeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.ExitNamedPipe(s)
	}
}

func (p *VyLangParser) NamedPipe() (localctx INamedPipeContext) {
	this := p
	_ = this

	localctx = NewNamedPipeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, VyLangParserRULE_namedPipe)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(72)
		p.Match(VyLangParserT__0)
	}
	{
		p.SetState(73)
		p.Match(VyLangParserIDENT)
	}
	{
		p.SetState(74)
		p.ContextPipe()
	}

	return localctx
}

// IContextPipeContext is an interface to support dynamic dispatch.
type IContextPipeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsContextPipeContext differentiates from other interfaces.
	IsContextPipeContext()
}

type ContextPipeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyContextPipeContext() *ContextPipeContext {
	var p = new(ContextPipeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = VyLangParserRULE_contextPipe
	return p
}

func (*ContextPipeContext) IsContextPipeContext() {}

func NewContextPipeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ContextPipeContext {
	var p = new(ContextPipeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = VyLangParserRULE_contextPipe

	return p
}

func (s *ContextPipeContext) GetParser() antlr.Parser { return s.parser }

func (s *ContextPipeContext) PathModel() IPathModelContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPathModelContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPathModelContext)
}

func (s *ContextPipeContext) PipeModified() IPipeModifiedContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPipeModifiedContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPipeModifiedContext)
}

func (s *ContextPipeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ContextPipeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ContextPipeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.EnterContextPipe(s)
	}
}

func (s *ContextPipeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.ExitContextPipe(s)
	}
}

func (p *VyLangParser) ContextPipe() (localctx IContextPipeContext) {
	this := p
	_ = this

	localctx = NewContextPipeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, VyLangParserRULE_contextPipe)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(76)
		p.Match(VyLangParserT__1)
	}
	{
		p.SetState(77)
		p.PathModel()
	}
	{
		p.SetState(78)
		p.Match(VyLangParserT__2)
	}
	{
		p.SetState(79)
		p.PipeModified()
	}

	return localctx
}

// IPipeContext is an interface to support dynamic dispatch.
type IPipeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPipeContext differentiates from other interfaces.
	IsPipeContext()
}

type PipeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPipeContext() *PipeContext {
	var p = new(PipeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = VyLangParserRULE_pipe
	return p
}

func (*PipeContext) IsPipeContext() {}

func NewPipeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PipeContext {
	var p = new(PipeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = VyLangParserRULE_pipe

	return p
}

func (s *PipeContext) GetParser() antlr.Parser { return s.parser }

func (s *PipeContext) PipeProperty() IPipePropertyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPipePropertyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPipePropertyContext)
}

func (s *PipeContext) PipeMap() IPipeMapContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPipeMapContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPipeMapContext)
}

func (s *PipeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PipeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PipeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.EnterPipe(s)
	}
}

func (s *PipeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.ExitPipe(s)
	}
}

func (p *VyLangParser) Pipe() (localctx IPipeContext) {
	this := p
	_ = this

	localctx = NewPipeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, VyLangParserRULE_pipe)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(83)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case VyLangParserT__4, VyLangParserT__5, VyLangParserT__6, VyLangParserT__7, VyLangParserT__8, VyLangParserT__9, VyLangParserT__10, VyLangParserT__11, VyLangParserT__12, VyLangParserT__13, VyLangParserT__14, VyLangParserT__15, VyLangParserIDENT:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(81)
			p.PipeProperty()
		}

	case VyLangParserT__16:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(82)
			p.PipeMap()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IPipePropertyContext is an interface to support dynamic dispatch.
type IPipePropertyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPipePropertyContext differentiates from other interfaces.
	IsPipePropertyContext()
}

type PipePropertyContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPipePropertyContext() *PipePropertyContext {
	var p = new(PipePropertyContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = VyLangParserRULE_pipeProperty
	return p
}

func (*PipePropertyContext) IsPipePropertyContext() {}

func NewPipePropertyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PipePropertyContext {
	var p = new(PipePropertyContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = VyLangParserRULE_pipeProperty

	return p
}

func (s *PipePropertyContext) GetParser() antlr.Parser { return s.parser }

func (s *PipePropertyContext) PipeTerminal() IPipeTerminalContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPipeTerminalContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPipeTerminalContext)
}

func (s *PipePropertyContext) PipeField() IPipeFieldContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPipeFieldContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPipeFieldContext)
}

func (s *PipePropertyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PipePropertyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PipePropertyContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.EnterPipeProperty(s)
	}
}

func (s *PipePropertyContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.ExitPipeProperty(s)
	}
}

func (p *VyLangParser) PipeProperty() (localctx IPipePropertyContext) {
	this := p
	_ = this

	localctx = NewPipePropertyContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, VyLangParserRULE_pipeProperty)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(87)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case VyLangParserT__4, VyLangParserT__5, VyLangParserT__6, VyLangParserT__7, VyLangParserT__8, VyLangParserT__9, VyLangParserT__10, VyLangParserT__11, VyLangParserT__12, VyLangParserT__13, VyLangParserT__14:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(85)
			p.PipeTerminal()
		}

	case VyLangParserT__15, VyLangParserIDENT:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(86)
			p.PipeField()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IPipeNamedPropertyContext is an interface to support dynamic dispatch.
type IPipeNamedPropertyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPipeNamedPropertyContext differentiates from other interfaces.
	IsPipeNamedPropertyContext()
}

type PipeNamedPropertyContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPipeNamedPropertyContext() *PipeNamedPropertyContext {
	var p = new(PipeNamedPropertyContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = VyLangParserRULE_pipeNamedProperty
	return p
}

func (*PipeNamedPropertyContext) IsPipeNamedPropertyContext() {}

func NewPipeNamedPropertyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PipeNamedPropertyContext {
	var p = new(PipeNamedPropertyContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = VyLangParserRULE_pipeNamedProperty

	return p
}

func (s *PipeNamedPropertyContext) GetParser() antlr.Parser { return s.parser }

func (s *PipeNamedPropertyContext) IDENT() antlr.TerminalNode {
	return s.GetToken(VyLangParserIDENT, 0)
}

func (s *PipeNamedPropertyContext) PipeProperty() IPipePropertyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPipePropertyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPipePropertyContext)
}

func (s *PipeNamedPropertyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PipeNamedPropertyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PipeNamedPropertyContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.EnterPipeNamedProperty(s)
	}
}

func (s *PipeNamedPropertyContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VyLangListener); ok {
		listenerT.ExitPipeNamedProperty(s)
	}
}

func (p *VyLangParser) PipeNamedProperty() (localctx IPipeNamedPropertyContext) {
	this := p
	_ = this

	localctx = NewPipeNamedPropertyContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, VyLangParserRULE_pipeNamedProperty)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(89)
		p.Match(VyLangParserIDENT)
	}
	{
		p.SetState(90)
		p.Match(VyLangParserT__3)
	}
	{
		p.SetState(91)
		p.PipeProperty()
	}

	return localctx
}

// IPipeTerminalContext is an interface to support dynamic dispatch.
type IPipeTerminalContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPipeTerminalContext differentiates from other interfaces.
	IsPipeTerminalContext()
}

type PipeTerminalContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPipeTerminalContext() *PipeTerminalContext {
	var p = new(PipeTerminalContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = VyLangParserRULE_pipeTerminal
	return p
}

func (*PipeTerminalContext) IsPipeTerminalContext() {}
